--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-LISTEN_PORT=4000
-DB_CONNECTION=host=localhost port=5432 user=postgres password=postgres dbname=go_auth sslmode=disable
+LISTEN_PORT=5000
+DB_CONNECTION=my.db
 JWT_ACCESS_TOKEN_SECRET_KEY=daskdmaslkdmalskdmakslmdas
-JWT_ACCESS_TOKEN_EXPIRY_TIME=300
+JWT_ACCESS_TOKEN_EXPIRY_TIME=3600
 JWT_REFRESH_TOKEN_SECRET_KEY=sadasdasdsaasddasdasdas
-JWT_REFRESH_TOKEN_EXPIRY_TIME=10
+JWT_REFRESH_TOKEN_EXPIRY_TIME=1440
