--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-LISTEN_PORT=5000
+PORT=5000
 DB_CONNECTION=my.db
 JWT_ACCESS_TOKEN_SECRET_KEY=daskdmaslkdmalskdmakslmdas
 JWT_ACCESS_TOKEN_EXPIRY_TIME=3600
